--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,23 @@ on:
       - main
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Sey up Nodejs
+        uses: actions/setup-node@v4
+        with: 
+          node-version: '18'
+      - name: Install dependencies
+        run: npm install
+      - name: Run eslint
+        run: npm run lint
+
   build:
     runs-on: ubuntu-latest
+    needs: [lint]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
