--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,26 @@ jobs:
         run: npm install
       - name: Run eslint
         run: npm run lint
+      
+  codeql:
+    runs-on: ubuntu-latest
+    needs: [lint] 
+    permissions:
+      security-events: write
+      actions: read
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Initialze CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: javascript-typescript
+      - name: Perform CodeQL analysis
+        uses: github/codeql-action/analyze@v3 
 
   build:
     runs-on: ubuntu-latest
-    needs: [lint]
+    needs: [lint,codeql]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
